fixed layout bug

--- a/public_html/assets/openessayist/css/application.css
+++ b/public_html/assets/openessayist/css/application.css
@@ -238,8 +238,8 @@ body {
 }
       
 .anchor  {
-	padding-top: 60px;
-  	margin-top: -60px;
+	/*padding-top: 60px;
+  	margin-top: -60px;*/
 } 
 
 
